# pico

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/desktop/: .env.example  .gitignore  package.json  svelte.config.js  test.txt.sig  tsconfig.json  vite.config.js  vitest.config.ts
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  splashscreen.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/lib/: backlog.test.ts  backlog.ts  debug.ts  logApi.svelte.ts  logGrouping.test.ts  logGrouping.ts  logState.svelte.ts  logWatcher.test.ts  logWatcher.ts  oauth.test.ts  oauth.ts  storage.ts  store-manager.ts  tauri-websocket-adapter.ts  test-helpers.ts  updater.ts  websocket-handler.ts
apps/desktop/src/routes/: +layout.js  +layout.svelte  auth-flow.integration.test.ts  layout.test.ts
apps/desktop/src/test/: helpers.ts  setup.ts
apps/desktop/src/types/: customLogs.ts
apps/desktop/static/ships/: ship-mapping.json
apps/server/: .dockerignore  .env.example  .flyignore  .gitignore  Dockerfile  fly.toml  index.ts  package.json  vitest.config.ts
apps/server/src/: index.ts
apps/server/src/config/: constants.ts
apps/server/src/handlers/: admin.test.ts  admin.ts  dashboard.test.ts  dashboard.ts  discover.ts  friends.ts  groups.ts  log-schema.test.ts  logs.ts  (+3 more)
apps/website/: .dockerignore  .env.example  .flyignore  .gitignore  Dockerfile  bunfig.toml  drizzle.config.ts  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
apps/website/src/: app.css  app.d.ts  app.html  hooks.server.test.ts  hooks.server.ts
(+135 files in other folders)
