[package]
name = "picologs"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "picologs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["macos-private-api", "devtools"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-store = "2.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1"
lazy_static = "1.4"
tauri-plugin-fs = { version = "2.4.2", features = ["watch"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-websocket = "2.4.0"
tauri-plugin-persisted-scope = "2.3.2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-http = "2.5.2"
tauri-plugin-devtools = "2.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
# tauri-plugin-window-state = "2"  # Disabled - causes periodic CPU spikes

# ===== RELEASE PROFILE OPTIMIZATIONS =====
[profile.release]
lto = "thin"           # Faster than full LTO, still good optimization
codegen-units = 16     # Parallel compilation (default is 1 for release)
strip = true           # Strip symbols for smaller binary

